# SaMMA

./: ChangeLog  INSTALL  Makefile.am  Makefile.in  README  SaMMA.spec  config.h.in  configure  configure.ac
contrib/spf-engine/: README
lib/: Makefile.in
lib/libdgconfig/: Makefile.in  libdgconfig.c  libdgconfig.h
lib/libdgmail/: Makefile.in  libdgmail.c  libdgmail.h
lib/libdgnetutil/: Makefile.in  libdgnetutil.c  libdgnetutil.h
lib/libdgstr/: Makefile.in  libdgstr.c  libdgstr.h
os_uploader/: Makefile.in
os_uploader/etc/: os_uploader.conf.in  os_uploader.tmpl.default
schema/: samma.ldif  samma.schema
shtool/: check_libdgmail.sh
src/: Makefile.am  Makefile.db  Makefile.in  client_side.c  client_side.h  errmsg.tmpl.default  exec_command.c  exec_command.h  extension.default  global.h  harmless.c  harmless.conf.default.in  harmless.h  log.c  log.h  maildrop.c  maildrop.h  mailsave.c  mailsave.h  mailzip.c  mailzip.h  mailzip_config.c.in  mailzip_config.h.in  mailzip_db.c  mailzip_db.h  mailzip_tmpl.c  mailzip_tmpl.h  msg_convert.c  msg_convert.h  msg_delete.c  msg_delete.h  msg_encrypt.c  msg_encrypt.h  netlist.c  netlist.h  rcpt.db  rcpt.default  samma-rcpt.tmpl.default  samma.conf.del.default.in  samma.conf.enc.default.in  (+18 more)
